# rchess

./: .gitignore  Cargo.toml  License  Readme.md
assets/: chess_set.gltf
src/: game_logic.rs  lib.rs  main.rs  menu.rs  utils.rs
src/game_logic/: board_evaluation.rs  board_logic.rs  game_heuristics.rs  minmax_logic.rs  movement_logic.rs  state_logic.rs
src/menu/: escape_menu.rs  settings.rs
src/utils/: board_graphics_utils.rs  board_utils.rs  core_types.rs  picking_utils.rs  setup_utils.rs  type_utils.rs
