[package]
name = "rchess"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
bevy-inspector-egui = "0.32.0"
bevy_egui = "0.35.1"
itertools = "0.14.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[features]
# default = ["bevy_mesh_picking_backend"]
